fixing styled z-index changed!

--- a/src/app/components/cube/cube.component.scss
+++ b/src/app/components/cube/cube.component.scss
@@ -12,7 +12,7 @@
   left: 50%;
   width: 50px;
   height: 50px;
-  z-index: 9999;
+  z-index: 999;
 
   cursor: pointer;
 
