--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -3,7 +3,7 @@
   color: #fff;
   padding: 1rem 0;
   position: sticky;
-  z-index: 1000;
+  z-index: 888;
   width: 100%;
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.3);
 
